@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Documentation, no functional change. Change some #define to enum for grouping purposes.
+ include/map.h
+Nicolas Weeger 2007-07-08
+
 Try to factor esrv_del_item and esrv_send_item into remove_ob() and
 insert_ob_in_ob(). Fix calls to esrv_send_item that are really esrv_update_item().
  common/object.c treasure.c
